# ucc_student

./: CMakeLists.txt  README.md  build.sh  run.sh
ucl/: CMakeLists.txt  Makefile  ast.c  ast.h  config.h  decl.c  decl.h  declchk.c  emit.c  error.c  expr.c  expr.h  exprchk.c  flow.c  fold.c  gen.c  gen.h  grammer.h  hello.c  hello.s  keyword.h  lex.c  lex.h  opcode.h  opinfo.h  output.c  reg.c  reg.h  run.sh  simp.c  stmt.c  stmt.h  stmtchk.c  str.c  str.h  symbol.c  symbol.h  target.h  test  test.c  (+11 more)
ucl/src/: alloc.h  ast.c  ast.h  config.h  decl.c  decl.h  declchk.c  emit.c  error.c  expr.c  expr.h  exprchk.c  fold.c  gen.c  gen.h  grammer.h  input.c  keyword.h  lex.c  lex.h  opcode.h  opinfo.h  output.c  reg.c  reg.h  simp.c  stmt.c  stmt.h  stmtchk.c  str.c  symbol.c  symbol.h  target.h  token.h  tokenop.h  tranexpr.c  transtmt.c  type.c  type.h  ucl.c  (+5 more)
ucl/test_case/: TestLex.cpp  TestUcl.cpp
ucl/test_case/test_file/: author_ucc  test_assign.c  test_auto.c  test_binary.c  test_binary_add_sub.c  test_binary_bitwise.c  test_binary_equality.c  test_binary_logical.c  test_binary_multiplicative.c  test_binary_relational.c  test_binary_shift.c  test_bitor_assign.c  test_break.c  test_conditional.c  test_const.c  test_continue.c  test_div_assign.c  test_do_while.c  test_enum.c  test_extern.c  test_fig1_24.c  test_fig1_28.c  test_fig1_31.c  test_fig1_32.c  test_fig1_33.c  test_fig1_41.c  test_fig1_42.c  test_fig1_43.c  test_fig2_27.c  test_fig2_36.c  test_fig4_18.c  test_fig4_19.c  test_fig4_32.c  test_fig4_9.c  test_fig5_1.c  test_fig5_12.c  test_fig5_13.c  (+36 more)
(+71 files in other folders)
